[workspace]
members = [
  "raydium_amm_saver",
  "raydium-amm-listener", 
  "block_parser",
"helpers", "warp-webserver", "parser-debugger", "kafka-ingest"]

resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"


[workspace.dependencies]
bincode = "1.3.3"
serde = "*"
serde_derive = "*"
serde_json = "1.0.107"
flate2 = "1.0.27"
csv = "1.3.0"
base64 = "0.21.4"
chrono = "0.4.31"
thiserror = "*"
itertools = "0.10.1"
tokio = { version = "1.14.1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
clap = { version = "4.4.11", features = ["derive"] }
deadpool = {version = "0.12.1", features = ["rt_tokio_1"]}
deadpool-postgres = "0.13.2"

# DB
mysql = "24.0.0"

# anchor & whirlpool
anchor-lang = "0.26.0"
anchor-client = "0.26.0"
whirlpool_base = { git = "https://github.com/orca-so/whirlpools", package = "whirlpool" }

# borsh
borsh = "0.10.3"

# use 1.16.18
solana-sdk = "=1.18.15"
solana-program = "=1.18.15"
solana-program-runtime = "=1.18.15"
solana-transaction-status = "=1.18.15"
solana-client = "=1.18.15"
solana-runtime = "=1.18.15"
solana-cli-output = "=1.18.15"
solana-ledger = "=1.18.15"
spl-token = "4.0.1"
moka = { version = "0.12.7", features = ["future", "sync"] }
