[package]
name = "kafka-ingest"
version.workspace = true
edition.workspace = true
[dependencies]
tokio.workspace = true
kafka = "0.10.0"
afl = { version = "*", default-features = false }
rdkafka = {version = "0.36.2", features = ["ssl", "sasl"]}
chrono.workspace = true
env_logger = "0.11.3"
log = "0.4.22"
clap = "2.18.0"

[build]
rustc-args = ["-Vv"]
