[package]
name = "raydium-amm-listener"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "1.16.18"
solana-program = "1.16.18"
solana-sdk = "1.16.18"
solana-transaction-status = "1.16.18"
futures = "0.3.28"
anyhow = "1.0.79"
clap = { workspace = true }
deadpool = {version = "0.10.0", features = ["rt_tokio_1"]}

transaction_parser = { path = "../transaction_parser" }
moka = { version = "0.12.7", features = ["future", "sync"] }
bincode.workspace = true
serde = "1.0.197"
flume = "0.11.0"
