[package]
name = "raydium-amm-listener"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
futures = "0.3.28"
anyhow = "1.0.79"
clap = { workspace = true }

block_parser = { path = "../block_parser" }
bincode.workspace = true
serde = "1.0.197"
flume = "0.11.0"
rand = "0.8.5"
deadpool.workspace = true
moka.workspace = true