[package]
name = "raydium-amm-saver"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features=["with-chrono-0_4", "with-serde_json-1"]}
# rust_decimal = "1.34"
rust_decimal = {version = "1.34.3", features = ["maths", "db-postgres"] }
rust_decimal_macros = "1.34"
clap = { workspace = true }
whirlpool_base = { workspace = true }
anchor-lang = { workspace = true }
# Struct sqlx::types::Decimal
solana-program = "=1.16.18"
anchor-client = "0.29.0"
solana-sdk = "=1.16.18"
solana-client = "=1.16.18"
solana-transaction-status = "=1.16.18"
solana-account-decoder = "=1.16.18"
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }
chrono = "0.4.35"
deadpool = {version = "0.10.0"}
# internal
async-trait = "0.1.79"
arl = "0.2.0"
deadpool-postgres = "0.12.1"
num = "0.4.1"
num-bigfloat = "1.7.1"
serde_json = "1.0.115"
serde = "1.0.197"
borsh = "0.9.1"
pg_bigdecimal = "0.1.5"
