[package]
name = "raydium_amm_saver"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features=["with-chrono-0_4", "with-serde_json-1"]}
# rust_decimal = "1.34"
rust_decimal = {version = "1.34.3", features = ["maths", "db-postgres"] }
rust_decimal_macros = "1.34"
clap = { workspace = true }
whirlpool_base = { workspace = true }
anchor-lang = { workspace = true }

# Struct sqlx::types::Decimal
solana-program.workspace = true
anchor-client = "0.30.0"
solana-sdk.workspace = true
solana-client.workspace = true
solana-transaction-status.workspace = true
# solana-account-decoder.workspace = true
# mpl-token-metadata = { version = "4.1.2"}
chrono = "0.4.35"
deadpool.workspace = true
# internal
async-trait = "0.1.79"
arl = "0.2.0"
deadpool-postgres.workspace = true
num = "0.4.1"
num-bigfloat = "1.7.1"
serde_json = "1.0.115"
serde = "1.0.197"
borsh.workspace = true
pg_bigdecimal = "0.1.5"

helpers = { path = "../helpers" }