[package]
name = "warp-webserver"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio.workspace = true
serde.workspace = true
block_parser = { path = "../block_parser" }
deadpool.workspace = true
deadpool-postgres.workspace = true
moka.workspace = true
serde_qs = { version = "0.13.0", features = ["warp"] }